--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@portabletext/svelte": "^2.0.0",
 		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@sveltejs/kit": "^1.0.0-next.587",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -31,7 +32,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@portabletext/types": "^2.0.2",
+		"@sanity/client": "^6.1.2",
+		"@sanity/image-url": "^1.0.2",
+		"@sanity/types": "^3.12.0",
 		"autoprefixer": "^10.4.14",
+		"groq": "^3.12.0",
 		"postcss": "^8.4.24",
 		"svelte-hamburgers": "^4.0.1",
 		"tailwindcss": "^3.3.2"
