--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"vite": "^4.4.9"
 	},
 	"dependencies": {
+		"@mux/mux-player": "^1.14.2",
 		"@sanity/block-content-to-html": "^2.0.0",
 		"@sanity/client": "^6.4.12",
 		"@sanity/image-url": "^1.0.2",
