--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sanity/types": "^3.24.1",
+		"@sanity/types": "^3.25.0",
 		"@sveltejs/adapter-auto": "^3.1.0",
-		"@sveltejs/kit": "^2.3.2",
+		"@sveltejs/kit": "^2.3.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
-		"@typescript-eslint/eslint-plugin": "^6.18.1",
-		"@typescript-eslint/parser": "^6.18.1",
+		"@types/lodash-es": "^4.17.12",
+		"@typescript-eslint/eslint-plugin": "^6.19.0",
+		"@typescript-eslint/parser": "^6.19.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^3.1.1",
+		"prettier": "^3.2.4",
 		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.69.7",
-		"svelte": "^4.2.8",
+		"svelte": "^4.2.9",
 		"svelte-check": "^3.6.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
@@ -36,7 +37,9 @@
 		"@sanity/block-content-to-html": "^2.0.0",
 		"@sanity/client": "^6.11.1",
 		"@sanity/image-url": "^1.0.2",
-		"lodash": "^4.17.21",
-		"svelte-hamburgers": "^4.2.0"
+		"get-video-id": "^3.6.5",
+		"lodash-es": "^4.17.21",
+		"svelte-hamburgers": "^4.2.0",
+		"swiper": "^11.0.5"
 	}
 }
