--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
 		"vite": "^5.0.11"
 	},
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@mux/mux-player": "^1.14.2",
 		"@sanity/block-content-to-html": "^2.0.0",
 		"@sanity/client": "^6.11.1",
 		"@sanity/image-url": "^1.0.2",
 		"get-video-id": "^3.6.5",
 		"lodash-es": "^4.17.21",
+		"svelte-fa": "^4.0.2",
 		"swiper": "^11.0.5"
 	}
 }
