--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@sanity/image-url": "^1.0.2",
 		"get-video-id": "^4.1.7",
 		"lodash-es": "^4.17.21",
+		"sass-embedded": "^1.79.4",
 		"svelte-fa": "^4.0.3",
 		"swiper": "^11.1.14"
 	}
